[gd_scene load_steps=4 format=3 uid="uid://pcdrh1vnpld0"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_myh58"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/SolidPanel.tres" id="2_vystf"]
[ext_resource type="Script" path="res://components/NameDialogBox/NameDialogBox.gd" id="3_s8ogl"]

[node name="NameDialogBox" type="PanelContainer" node_paths=PackedStringArray("_line_edit", "_label")]
custom_minimum_size = Vector2(496.05, 145.07)
offset_left = 711.0
offset_top = 467.0
offset_right = 1207.05
offset_bottom = 612.07
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_myh58")
theme_override_styles/panel = ExtResource("2_vystf")
script = ExtResource("3_s8ogl")
_line_edit = NodePath("VBoxContainer/Label/LineEdit")
_label = NodePath("VBoxContainer/Label/Label")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/Label"]
layout_mode = 2
text = "Choose A Name:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Label"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
select_all_on_focus = true

[node name="DeleteMode" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(301.96, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Cancel" type="Button" parent="VBoxContainer/DeleteMode"]
layout_mode = 2
size_flags_horizontal = 2
text = "Cancel"

[node name="Confirm" type="Button" parent="VBoxContainer/DeleteMode"]
layout_mode = 2
size_flags_horizontal = 8
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/DeleteMode/Cancel" to="." method="_on_rejected_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteMode/Confirm" to="." method="_on_confirmed_button_pressed"]
